src/main/java/com/example/MyBookShopApp/errors/exceptions/BookstoreApiWrongParameterException.java
package com.example.MyBookShopApp.errors.exceptions;

public class BookstoreApiWrongParameterException extends Exception {
    public BookstoreApiWrongParameterException(String message) {
        super(message);
    }
}
